Add git book info

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, asides/googleplus.html, asides/twitter.html, custom/asides/about.html]
+default_asides: [asides/git_book.html, asides/recent_posts.html, asides/googleplus.html, asides/twitter.html, custom/asides/about.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -98,3 +98,5 @@ google_analytics_tracking_id: UA-37305061-1
 
 # Facebook Like
 facebook_like: true
+
+mailchimp_embed_action: http://gmail.us1.list-manage.com/subscribe/post?u=60ff1f06e1ad5abc0846226a9&amp;id=0f83623d5b
