--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://jjbohn.info
 title: John Bohn
-subtitle: My thoughts on software, tech, business, fitness, and more
+subtitle: My thoughts on software, tech, business, and more
 author: John Bohn
 simple_search: http://google.com/search
 description:
